feat: add check staker active delegations endpoint
