# docs/swagger.json
@@ -63,6 +63,37 @@
                 }
             }
         },
+        "/v1/staker/delegation/check": {
+            "get": {
+                "description": "Check if staker has active delegation",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Staker BTC Public Key",
+                        "name": "staker_btc_pk",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Result",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.Result"
+                        }
+                    },
+                    "400": {
+                        "description": "Error: Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_babylonchain_staking-api-service_internal_types.Error"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/staker/delegations": {
             "get": {
                 "description": "Retrieves delegations for a given staker",
@@ -286,6 +317,15 @@
                 },
                 "pagination": {
                     "$ref": "#/definitions/handlers.paginationResponse"
+                }
+            }
+        },
+        "handlers.Result": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "status": {
+                    "type": "integer"
                 }
             }
         },
